API-11749: [COLOR CONTRAST]: Fix color contrast for deprecated endpoints on dev portal - P4 (#923)

--- a/src/containers/documentation/swaggerPlugins/StyleOverride.scss
+++ b/src/containers/documentation/swaggerPlugins/StyleOverride.scss
@@ -84,6 +84,12 @@
       max-width: 100%;
     }
   }
+
+  &.opblock-deprecated {
+    .opblock-summary-method {
+      color: $color-black !important;
+    } 
+  }
 }
 .swagger-ui .renderedMarkdown {
   @import '~uswds/src/stylesheets/elements/table';
